<resources>
    <string name="app_name">SocialNetwork</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="thongbao">Thông báo</string>
    <string name="viet_binh_luan">Viết bình luận</string>
    <string name="dang">Đăng</string>
    <string name="chon_anh_cua_ban">Chọn ảnh của bạn</string>
    <string name="luu">LƯU</string>
    <string name="todo">TODO</string>
    <string name="sua_thong_tin">Sửa thông tin</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="ten">Tên</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="post">Post</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="full_name">Full Name</string>
    <string name="username">UserName</string>
    <string name="bai_viet">Bài viết</string>
    <string name="nguoi_theo_doi">Người theo dõi</string>
    <string name="dang_theo_doi">Đang theo dõi</string>
    <string name="tim_kiem_ban_be">Tìm kiếm bạn bè</string>
    <string name="description">Nội Dung</string>
    <string name="like">10 like</string>
    <string name="bl">Có 20 bình luận</string>
    <string name="binh_luan">Bình luận</string>
    <string name="theodoi">Theo dõi</string>
    <string name="bo_theo_dõi">Bỏ theo dõi</string>
    <string name="bio">Tiểu sử</string>
</resources>
